--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,4 +1,4 @@
-#spring.datasource.url=jdbc:tc:postgresql:16-alpine:///test
-#spring.test.database.replace=none
-#spring.datasource.username=test
-#spring.datasource.password=test
+spring.datasource.url=jdbc:tc:postgresql:17-alpine:///test
+spring.test.database.replace=none
+spring.datasource.username=test
+spring.datasource.password=test
