--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,10 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.4.4'
     id 'io.spring.dependency-management' version '1.1.7'
-    id 'org.asciidoctor.jvm.convert' version '3.3.2'
 }
 
 group = 'com.vednovak'
-version = '0.0.1'
+version = '1.0.0'
 
 java {
     toolchain {
@@ -46,11 +45,13 @@ dependencies {
 }
 
 tasks.named('test') {
-    outputs.dir snippetsDir
     useJUnitPlatform()
 }
 
-tasks.named('asciidoctor') {
-    inputs.dir snippetsDir
-    dependsOn test
+bootJar {
+    enabled = true
+}
+
+jar {
+    enabled = false
 }
