--- a/compose.yaml
+++ b/compose.yaml
@@ -12,23 +12,21 @@ services:
     volumes:
       - product-db:/var/lib/postgresql/data
 
-#  # TODO - use env specific port-forwarding config
-#  service:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-#    container_name: product-api
-#    restart: always
-#    environment:
-#       TODO: why not jdbc:postgresql://localhost:5432/product-db ??
-#      - SPRING_DATASOURCE_URL=jdbc:postgresql://database:5432/product-db
-#      - SPRING_DATASOURCE_USERNAME=postgres
-#      - SPRING_DATASOURCE_PASSWORD=password
-#    ports:
-#      - '8080:8080'
-#      - '8000:8000'
-#    depends_on:
-#      - database
+  service:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: product-api
+    restart: always
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://database:5432/product-db
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=password
+    ports:
+      - '8081:8081'
+      - '8000:8000'
+    depends_on:
+      - database
 
 volumes:
   product-db:
