--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,6 +14,21 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:14
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: product_db
+        options: >-
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
     steps:
       - name: Checkout project
         uses: actions/checkout@v4
@@ -23,12 +38,21 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-          #TODO add caching of dependencies
+
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          for i in {1..10}; do
+            nc -z localhost 5432 && break
+            echo "Waiting for PostgreSQL..."
+            sleep 5
+          done
 
       - name: Build the application
         run: make build
 
       - name: Run tests
+        env:
+          SPRING_PROFILES_ACTIVE: test
         run: make test
 
       - name: Containerize and deploy (WIP)
