--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -2,5 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/product-db
 spring.datasource.username=postgres
 spring.datasource.password=password
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 logging.level.com.vednovak.manager=debug
