--- a/compose.yaml
+++ b/compose.yaml
@@ -1,16 +1,16 @@
 services:
   database:
     image: postgres:17-alpine
-    container_name: product-db
+    container_name: product_db
     restart: always
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=product-db
+      - POSTGRES_DB=product_db
     ports:
       - '5432:5432'
     volumes:
-      - product-db:/var/lib/postgresql/data
+      - product_db:/var/lib/postgresql/data
 
   service:
     build:
@@ -19,7 +19,7 @@ services:
     container_name: product-api
     restart: always
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://database:5432/product-db
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://database:5432/product_db
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=password
     ports:
@@ -29,4 +29,4 @@ services:
       - database
 
 volumes:
-  product-db:
+  product_db:
