--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/product-db
+spring.datasource.url=jdbc:postgresql://localhost:5432/product_db
 spring.datasource.username=postgres
 spring.datasource.password=password
 
