--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://database:5432/product_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/product_db
 spring.datasource.username=postgres
 spring.datasource.password=password
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.generate-ddl=true
 logging.level.com.vednovak.manager=debug
